4.1.5
Merged from 4.0:
Merged from 3.11:
Merged from 3.0:


4.1.4
 * Memoize Cassandra verion and add a backoff interval for failed schema pulls (CASSANDRA-18902)
 * Fix StackOverflowError on ALTER after many previous schema changes (CASSANDRA-19166)
 * Fixed the inconsistency between distributedKeyspaces and distributedAndLocalKeyspaces (CASSANDRA-18747)
 * Internode legacy SSL storage port certificate is not hot reloaded on update (CASSANDRA-18681)
 * Nodetool paxos-only repair is no longer incremental (CASSANDRA-18466)
 * Waiting indefinitely on ReceivedMessage response in StreamSession#receive() can cause deadlock (CASSANDRA-18733)
 * Allow empty keystore_password in encryption_options (CASSANDRA-18778)
 * Skip ColumnFamilyStore#topPartitions initialization when client or tool mode (CASSANDRA-18697)
Merged from 4.0:
 * Add new concurrent_merkle_tree_requests config property to prevent OOM during multi-range and/or multi-table repairs (CASSANDRA-19336)
 * Skip version check if an endpoint is dead state in Gossiper#upgradeFromVersionSupplier (CASSANDRA-19187)
 * Fix Gossiper::hasMajorVersion3Nodes to return false during minor upgrade (CASSANDRA-18999)
 * Revert unnecessary read lock acquisition when reading ring version in TokenMetadata introduced in CASSANDRA-16286 (CASSANDRA-19107)
 * Support max SSTable size in sorted CQLSSTableWriter (CASSANDRA-18941)
 * Fix nodetool repair_admin summarize-pending command to not throw exception (CASSANDRA-19014)
 * Fix cassandra-stress in simplenative mode with prepared statements (CASSANDRA-18744)
 * Fix filtering system ks sstables for relocation on startup (CASSANDRA-18963)
 * Remove completed coordinator sessions (CASSANDRA-18903)
 * Make StartupConnectivityChecker only run a connectivity check if there are no nodes which are running a version prior to Cassandra 4 (CASSANDRA-18968)
 * Retrieve keyspaces metadata and schema version concistently in DescribeStatement (CASSANDRA-18921)